# clothes-magazin-project

./: Makefile  entrypoint.sh  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/categories/: schemas.py
core/api/v1/favorites/: schemas.py
core/api/v1/products/: filters.py  handlers.py  schemas.py
core/api/v1/reviews/: shemas.py
core/apps/common/: constants.py  enums.py  models.py
core/apps/customers/: admin.py  apps.py
core/apps/customers/entities/: customers.py  favorites.py
core/apps/customers/exceptions/: codes.py
core/apps/customers/migrations/: 0001_initial.py  0002_initial.py
core/apps/customers/models/: customers.py  favorites.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: categories.py  categoris.py  products.py  reviews.py
core/apps/products/exceptions/: categories.py  products.py
core/apps/products/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_category.py  0004_alter_product_category.py  0005_alter_product_category_alter_product_size.py
core/apps/products/models/: __init__.py  categories.py  products.py  reviews.py
core/apps/products/services/: categories.py  products.py
core/project/: urls.py
core/project/settings/: main.py
docker_compose/: logs  storages.yaml
